[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fluxion-plugin-dns"
version = "0.1.0"
description = "DNS Reconnaissance Command for Fluxion"
dependencies = [
    "aiodns>=3.2.0",
]

[tool.setuptools]
py-modules = ["fluxion_plugin_dns"]

[project.entry-points."fluxion.plugins"]
dns = "fluxion_plugin_dns:create_plugin"
