[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fluxion-plugin-scan"
version = "1.0.0"
description = "Asynchronous TCP Port Scanner Extension for Fluxion"
readme = "README.md"
authors = [
    { name = "ScorpioCodeX", email = "scorpiocodex0@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fluxion",  # Core dependency
    "typer>=0.9.0",
    "rich>=13.0.0"
]

[project.entry-points."fluxion.plugins"]
scan = "fluxion_plugin_scan.plugin:PortScanPlugin"
